Corrigida verificação no login para impedir acesso de usuários inativos.Refatorada a encriptação de senha, que agora é aplicada na ponta.Concluída a funcionalidade de listagem de usuários.

--- a/backend/src/main/resources/templates/backoffice.html
+++ b/backend/src/main/resources/templates/backoffice.html
@@ -5,12 +5,12 @@
     <title>Página Principal do Backoffice</title>
 </head>
 <body>
-    <h1>Bem-vindo ao Backoffice!</h1>
+    <h1>Tela Backoffice</h1>
     
     <nav>
         <ul>
             <li><a th:href="@{/produtos}">Lista de Produtos</a></li>
-            <li th:if="${isAdmin}"><a th:href="@{/usuarios}">Lista de Usuários</a></li>
+            <li th:if="${isAdmin}"><a th:href="@{/backoffice/usuarios}">Lista de Usuários</a></li>
             <li><a th:href="@{/logout}">Logout</a></li>
         </ul>
     </nav>
