--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Login Backoffice</title>
-    <meta charset="UTF-8">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-</head>
-<body>
-    <h2>Login Backoffice</h2>
-    <form th:action="@{/backoffice-login}" method="post">
-        <div>
-            <label for="username">Email:</label>
-            <input type="text" id="username" name="username" required/>
-        </div>
-        <div>
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required/>
-        </div>
-        <button type="submit">Entrar</button>
-    </form>
+    <head>
+        <title>Login Backoffice</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h2>Login Backoffice</h2>
+        <form th:action="@{/backoffice-login}" method="post">
+            <div>
+                <label for="username">Email:</label>
+                <input type="text" id="username" name="username" required/>
+            </div>
+            <div>
+                <label for="password">Senha:</label>
+                <input type="password" id="password" name="password" required/>
+            </div>
+            <button type="submit">Entrar</button>
+        </form>
 
-    <p th:if="${param.disabled}">Seu usuário está inativo. Por favor, entre em contato com o administrador.</p>
-  
-    <p th:if="${param.error}">Usuário ou senha inválidos!</p>
+        <p th:if="${param.disabled}">Seu usuário está inativo. Por favor, entre em contato com o administrador.</p>
 
-    <script>
-        document.querySelector("form").addEventListener("submit", function (event) {
-            var senhaInput = document.getElementById("password");
-            var senhaOriginal = senhaInput.value;
-            var senhaEncriptada = CryptoJS.SHA256(senhaOriginal).toString();
-            senhaInput.value = senhaEncriptada;
-        });
-    </script>
-</body>
+        <p th:if="${param.error}">Usuário ou senha inválidos!</p>
+
+        <script>
+            document.querySelector("form").addEventListener("submit", function (event) {
+                var senhaInput = document.getElementById("password");
+                var emailInput = document.getElementById("username");
+
+                if (senhaInput.value.trim() === "" || emailInput.value.trim() === "") {
+                    event.preventDefault();
+                    alert("Email e senha não podem estar vazios.");
+                }
+            });
+        </script>
+
+    </body>
 </html>
